Closed Bug 1936204 Opened 1 year ago Closed 1 year ago

The text is scanned again if another string is copied while a warning text is canceled or a blocked dialog is confirmed

Categories

(Firefox :: Data Loss Prevention, defect)

Desktop
Windows
defect

Tracking

()

VERIFIED FIXED
136 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox133 --- unaffected
firefox134 --- disabled
firefox135 --- disabled
firefox136 --- verified

People

(Reporter: atrif, Assigned: gstoll)

References

(Blocks 2 open bugs, Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached image dlp_0.gif

Found in

  • 135.0a1 (2024-12-09)

Affected versions

  • 135.0a1 (2024-12-09)
  • 134.0b8

Tested platforms

  • Affected platforms: Windows 11, Windows 10
  • Unaffected platforms:macOS 12, Ubuntu

Preconditions

Steps to reproduce

  1. Paste the warning string to Wikipedia.
  2. While the scan is ongoing copy another random string.
  3. Press cancel on the unsafe content window.

Expected result

  • No scanning is performed.

Actual result

  • The string from step 2 is scanned.

Regression range

Additional notes

  • Attached a screen recording.

:gstoll, since you are the author of the regressor, bug 1915351, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(gstoll)

It seems that this also happens with the blocked dialog.

Summary: The text is scanned again if another string is copied while a warning text is canceled → The text is scanned again if another string is copied while a warning text is canceled or a bloked dialog is confirmed
Assignee: nobody → gstoll
Status: NEW → ASSIGNED
Flags: needinfo?(gstoll)

This was causing an issue where if the snapshot didn't have the appropriate
data because it was blocked by Content Analysis, it would fall back to
getting the data directly from the clipboard, which would trigger another
Content Analysis operation.

Summary: The text is scanned again if another string is copied while a warning text is canceled or a bloked dialog is confirmed → The text is scanned again if another string is copied while a warning text is canceled or a blocked dialog is confirmed

The severity field is not set for this bug.
:handyman, could you have a look please?

For more information, please visit BugBot documentation.

Flags: needinfo?(davidp99)
Severity: -- → S3
Flags: needinfo?(davidp99)
Pushed by gstoll@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a4d7ed9a5599 do not fallback to raw clipboard if snapshot doesn't have data r=edgar,dlp-reviewers,handyman
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 136 Branch

Verified fixed with Firefox 136.0a1 (2025-01-13) on Windows 10x64 and Windows 11. The text is no longer scanned again if another string is copied while the scan in ongoing and the warning/ block message is displayed.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: