Bug 1936204 - do not fallback to raw clipboard if snapshot doesn't have data r=edgar,dlp-reviewers,handyman

This was causing an issue where if the snapshot didn't have the appropriate
data because it was blocked by Content Analysis, it would fall back to
getting the data directly from the clipboard, which would trigger another
Content Analysis operation.

Differential Revision: https://phabricator.services.mozilla.com/D231837